[workspace]
members = [
    "flox",
    "flox-rust-sdk",
    "catalog-api-v1",
    "mk_data",
    "flox-watchdog",
    "flox-activations",
    "flox-core",
    "flox-test-utils",
]
default-members = ["flox", "flox-watchdog", "flox-activations"]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3.6"
blake3 = "1.8.2"
bpaf = { version = "0.9.20", features = ["derive", "autocomplete"] }
catalog-api-v1 = { path = "catalog-api-v1" }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
clap_derive = "4.5.4"
close_fds = "0.3"
# Pinned due to bug: https://github.com/rust-cli/config-rs/issues/531
config = { version = "0.13.4", default-features = false, features = ["toml"] }
crossterm = "0.27"
derive_more = "0.99.20"
dirs = "5.0.0"
enum_dispatch = "0.3.13"
flox-activations = { path = "flox-activations" }
flox-core = { path = "flox-core" }
flox-rust-sdk = { path = "flox-rust-sdk" }
flox-test-utils = { path = "flox-test-utils" }
fslock = "0.2.1"
fs_extra = "1.3.0"
futures = "0.3"
# git pending:
# - https://github.com/alexliesenfeld/httpmock/issues/127
# - https://github.com/alexliesenfeld/httpmock/pull/131
httpmock = { git = "https://github.com/flox/httpmock.git", branch = "flox/remove_recording_struct", default-features = false, features = [
    "proxy",
    "record",
] }
indent = "0.1.1"
indexmap = { version = "2.9.0", features = ["serde"] }
indoc = "2.0.6"
inquire = "0.6.0"
indicatif = "0.17"
itertools = "0.12.1"
jsonwebtoken = "9.3"
log = { version = "0.4.27", features = ["kv"] }
nix = { version = "0.28", features = ["signal", "process", "user"] }
oauth2 = "4.4"
once_cell = "1.21.3"
path-dedot = "3.1.1"
pollster = "0.3.0"
progenitor-client = "0.6"
proptest = "1.6.0"
proptest-derive = "0.5.1"
regex = "1.10"
regress = "0.9.1"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
semver = "1.0.26"
sentry = { version = "0.32.3", features = [
    "test",
    "anyhow",
    "tracing",
    "debug-logs",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "3.12.0"
serde_yaml = "0.9"
shell-escape = "0.1.5"
slug = "0.1"
supports-color = "3.0.2"
# provides process tools for shell detection
sysinfo = "0.32.1"
# provide system version information for metric
# TODO: review if we need this
sys-info = "0.9"
tempfile = "3.20.0"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.22"
toml_edit = { version = "0.22", features = ["serde"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-indicatif = "0.3.9"
tracing-log = { version = "0.2", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
url-escape = "0.1.1"
uuid = { version = "1.16", features = ["serde", "v4"] }
walkdir = "2"
xdg = "2.4"


# dev dependencies
pretty_assertions = "1.4"
serial_test = "3.2.0"
temp-env = "0.3.2"

# watchdog dependencies
kqueue = "1.1.1"
signal-hook = "0.3.18"

# build(.rs) dependencies
openapiv3 = "2.0"
prettyplease = "0.2"
progenitor = "0.6"
syn = "2.0"

[profile.small]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
