[workspace]
members = [
    "flox",
    "flox-rust-sdk",
    "catalog-api-v1",
    "mk_data",
    "flox-activations",
    "flox-core",
    "flox-test-utils",
]
default-members = ["flox", "flox-activations"]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3.6"
blake3 = "1.8.2"
bpaf = { version = "0.9.20", features = ["derive", "autocomplete"] }
catalog-api-v1 = { path = "catalog-api-v1" }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
close_fds = "0.3"
config = { version = "0.15", default-features = false, features = ["toml"] }
crossterm = "0.27"
derive_more = "0.99.20"
dirs = "5.0.0"
enum_dispatch = "0.3.13"
flox-activations = { path = "flox-activations" }
flox-core = { path = "flox-core" }
flox-rust-sdk = { path = "flox-rust-sdk" }
flox-test-utils = { path = "flox-test-utils" }
fslock = "0.2.1"
fs_extra = "1.3.0"
futures = "0.3"
http = "1.3.1"
# git pending:
# - https://github.com/alexliesenfeld/httpmock/issues/127
# - https://github.com/alexliesenfeld/httpmock/pull/131
httpmock = { git = "https://github.com/flox/httpmock.git", default-features = false, features = [
    "proxy",
    "record",
] }
indent = "0.1.1"
indexmap = { version = "2.11.4", features = ["serde"] }
indoc = "2.0.6"
inquire = "0.6.0"
indicatif = "0.18"
is_executable = "1.0.5"
itertools = "0.12.1"
jsonwebtoken = "9.3"
libc = "0.2.177"
log = { version = "0.4.28", features = ["kv"] }
nix = { version = "0.28", features = ["signal", "process", "user"] }
oauth2 = "4.4"
path-dedot = "3.1.1"
pollster = "0.3.0"
progenitor-client = "0.11.2"
proptest = "1.8.0"
proptest-derive = "0.5.1"
regex = "1.12"
regress = "0.10.4"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
schemars = "1"
semver = "1.0.27"
sentry = { version = "0.32.3", features = [
    "test",
    "anyhow",
    "tracing",
    "debug-logs",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "3.15.0"
serde_yaml = "0.9"
shell-escape = "0.1.5"
signal-hook = "0.3.18"
slug = "0.1"
supports-color = "3.0.2"
# provides process tools for shell detection
sysinfo = "0.32.1"
# provide system version information for metric
# TODO: review if we need this
sys-info = "0.9"
tempfile = "3.23.0"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "macros", "local-offset"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
toml_edit = { version = "0.22", features = ["serde"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-indicatif = "0.3.13"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
url-escape = "0.1.1"
uuid = { version = "1.16", features = ["serde", "v4"] }
walkdir = "2"
xdg = "2.4"


# dev dependencies
pretty_assertions = "1.4"
serial_test = "3.2.0"
temp-env = "0.3.2"

# build(.rs) dependencies
openapiv3 = "2.2"
prettyplease = "0.2"
progenitor = "0.11.2"
syn = "2.0"

[profile.small]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
